# sketchmaker

./: .env.sample  .gitignore  LICENSE  README.md  SUBSCRIPTION_SETUP.md  TAILWIND_SETUP.md  add_cerebras_models.py  add_groq_models.py  add_virtual_credits.py  app.py  apply_changes.sh  apply_security_fixes.py  check_permissions.sh  extensions.py  fix_subscriptions.py  models.py  package.json  prestart.sh  pyproject.toml  requirements.txt  setup_subscriptions.py  tailwind.config.js  test.py  test_fal.py  test_litellm.py  update_gpt5_models.py  update_schema.py  vercel.json  version.py
.claude/: settings.local.json
blueprints/: __init__.py  admin.py  auth.py  banner.py  clients.py  core.py  download.py  explainer.py  gallery.py  generate.py  image_generator.py  image_utils.py  magix.py  prompt_generator.py  training.py  virtual.py
blueprints/admin/: __init__.py  api_routes.py  auth_routes.py  dashboard_routes.py  decorators.py  email_routes.py  subscription_routes.py  system_routes.py  user_routes.py  utils.py
docs/: README.md  admin-guide.md  api-reference.md  features.md  getting-started.md  installation.md  product-overview.md  security.md  user-guide.md
migrations/: __init__.py  alembic.ini  migrate_all.py
migrations/versions/: add_centralized_api_management.py  add_credit_security_constraints.py  add_feature_usage_tracking.py  add_google_auth_support.py  add_new_litellm_providers.py  add_subscription_system.py  rename_banners_to_explainers.py
models/: __init__.py  api.py  api_settings.py  auth.py  content.py  email.py  subscription.py  system.py
server/: README.md  check_logs.sh  check_permissions.sh  install.sh  nginx.conf  setup.md  setup_server.sh  sketchmaker  sketchmaker.service
server/migrations/: README.md  add_google_auth_support.sql
services/: __init__.py  image_optimizer.py  scheduler.py
static/css/: custom.css  input.css  output.css  styles.css
static/js/: custom.js  form-handler.js  image-gen-controls.js  image-generator.js  particles.min.js  prompt-generator.js  script.js  training.js  ui-updater.js
templates/: 404.html  about.html  banner.html  base.html  dashboard.html  explainer.html  faq.html  gallery.html  image.html  index.html  magix.html  pricing.html  privacy.html  refund.html  settings.html  subscription.html  terms.html  training.html  virtual.html
templates/admin/: api_management.html  auth.html  credit_configuration.html  dashboard.html  edit_user_limits.html  email.html  manage.html  model_management.html  scheduled_jobs.html  subscription_plans.html  subscription_reports.html  (+2 more)
(+23 files in other folders)
